<resources>
    <string name="app_name">Car Rental Service</string>
    <string name="register">Register</string>
    <string name="already_account">Already have an Account?</string>
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="password_forget">Forget Password?</string>
    <string name="dont_have_an_account">Don\'t Have an Account?</string>
    <string name="signup">SignUp?</string>
    <string name="driver_Name">Driver Name</string>
    <string name="car_name">Car Name</string>
    <string name="driver_mobile_no">Driver Mobile No</string>
    <string name="adress">Address</string>
    <string name="add_Info">Add Information</string>
    <string name="car_Fare">Fare</string>
    <string name="des_logo">logo</string>
    <string name="btn_call">Call</string>
    <string name="show_Location">Show Location</string>

</resources>