<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bb"
    android:layout_margin="1dp"
    tools:context=".InfoActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="340dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/des_logo"
        app:srcCompat="@drawable/car" />

    <TextView
        android:id="@+id/tvInfoDName"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_bg"
        android:fontFamily="casual"
        android:gravity="center|start|center_horizontal|center_vertical"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvInfoCarName"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="2dp"
        android:background="@drawable/input_bg"
        android:fontFamily="casual"
        android:gravity="center|start|center_horizontal|center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvFare"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="2dp"
        android:background="@drawable/input_bg"
        android:fontFamily="casual"
        android:gravity="center|start|center_horizontal|center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvInfoDNO"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="2dp"
        android:background="@drawable/input_bg"
        android:fontFamily="casual"
        android:gravity="center|start|center_horizontal|center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="3dp"

        android:fontFamily="casual"
        android:gravity="center|center_horizontal|center_vertical"
        android:padding="10dp"
        android:text="@string/btn_call"
        android:textColor="@color/color_Primary_Dark"
        android:textSize="18sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="70dp" />

    <TextView
        android:id="@+id/tvDriverAdress"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_bg"
        android:fontFamily="casual"
        android:gravity="center|start|center_horizontal|center_vertical"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:layout_margin="3dp"
        android:fontFamily="casual"
        android:gravity="center|center_horizontal|center_vertical"
        android:padding="10dp"
        android:text="@string/show_Location"
        android:textColor="@color/color_Primary_Dark"
        android:textSize="18sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="70dp" />


</LinearLayout>